integration_tests/codegen_fail/fail/union/impl_no_fields.rs
enum Character {}

#[juniper::graphql_union]
impl Character {
    async fn resolve(&self) {
        match self {}
    }
}

fn main() {}
