integration_tests/codegen_fail/fail/union/impl_no_fields.stderr
error: GraphQL union expects at least one field
 --> $DIR/impl_no_fields.rs:5:5
  |
5 | /     async fn resolve(&self) {
6 | |         match self {}
7 | |     }
  | |_____^
  |
  = note: https://spec.graphql.org/June2018/#sec-Unions
